admin-post-list.css has conflict attrs

--- a/src/main/resources/templates/admin/admin-post-list.html
+++ b/src/main/resources/templates/admin/admin-post-list.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
-  <link rel="stylesheet" th:href="@{assets/css/admin-post-list.css}">
+  <!-- <link rel="stylesheet" th:href="@{/assets/css/admin-post-list.css}"> -->
 
   <style>
     /* Custom styles (optional) */
