Post is saved to DB

--- a/src/main/resources/templates/admin/admin-post-list.html
+++ b/src/main/resources/templates/admin/admin-post-list.html
@@ -88,7 +88,7 @@
             </tr>
         </tbody>
     </table>
-    <a href="#" class="btn">
+    <a href="/admin/post" class="btn">
         <img src="/assets/images/create.png" alt="Add">Add New Post
     </a>
 </div>
