--- a/src/main/resources/templates/admin/admin-post-add-form.html
+++ b/src/main/resources/templates/admin/admin-post-add-form.html
@@ -45,11 +45,17 @@
                     <option value="alerts">Alerts</option>
                     <option value="advisories">Advisories</option>
                     <option value="bulletins">Bulletins</option>
+                    <option value="articles">Articles</option>
+                    <option value="notices">Notices</option>
+                    <option value="news">News</option>
+                    <option value="events">Events</option>
                 </select>
             </div>
 
             <!-- Rich Text Editor -->
             <div class="toolbar">
+                <button type="button" class="toolbar-btn" onclick="changeFontSize()">Font</button>
+                <!-- <button type="button" class="toolbar-btn" onclick="insertImage()">Insert Image</button> -->
                 <button type="button" class="toolbar-btn" onclick="execCommand('bold')"><i class="fas fa-bold"></i> Bold</button>
                 <button type="button" class="toolbar-btn" onclick="execCommand('italic')"><i class="fas fa-italic"></i> Italic</button>
                 <button type="button" class="toolbar-btn" onclick="execCommand('underline')"><i class="fas fa-underline"></i> Underline</button>
@@ -103,8 +109,8 @@
             <button type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
         </form>
     </div>
-
-
+    <br>
+    <div th:replace="~{fragments/footer :: footer}"></div>
     <script src="/assets/js/admin-post-form.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
