--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -52,6 +52,8 @@
             <li><a class="dropdown-item" href="/alerts">Alerts</a></li>
             <li><a class="dropdown-item" href="/advisories">Advisories</a></li>
             <li><a class="dropdown-item" href="/bulletins">Bulletins</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="/articles">Articles</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
