--- a/src/main/resources/templates/admin/admin-post-list.html
+++ b/src/main/resources/templates/admin/admin-post-list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Post-List</title>
+  <title>Admin Post List</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -29,56 +29,30 @@
 
 <div class="admin-container">
     <h1>Post List</h1>
+    <a href="/admin/post" class="admin-btn mb-3">
+        <img src="/assets/images/create.png" alt="Add" height="24" width="24">Add New Post
+    </a>
     <table>
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Title</th>
+                <th>Visibility</th>
                 <th>Category</th>
                 <th>Published At</th>
-                <th>Visibility</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>example-image.jpg</td>
-                <td>Image</td>
-                <td>15-Jan-2025</td>
-                <td>Public</td>
+            <tr th:each="post,iterator: ${postList}">
+                <td th:text="${iterator.index+1}"> </td>
+                <td th:text="${post.getTitle()}"> </td>
+                <td th:text="${post.getVisibility()}" th:if="${post.getVisibility()} == 'public'" class="fw-bold text-success"> </td>
+                <td th:text="${post.getVisibility()}" th:unless="${post.getVisibility()} == 'public'" class="fw-bold text-danger"> </td>
+                <td th:text="${post.getCategory()}"> </td>
+                <td th:text="${#temporals.format(post.getPublishedAt(), 'dd-MMM-yyyy HH:mm:ss')}"> </td>
                 <td>
-                    <a href="#" class="admin-btn">
-                        <img src="/assets/images/edit.png" alt="View" height="24" width="24">View
-                    </a>
-                    <a href="#" class="admin-btn">
-                        <img src="/assets/images/delete.png" alt="Delete" height="24" width="24">Delete
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>document.pdf</td>
-                <td>Document</td>
-                <td>14-Jan-2025</td>
-                <td>Private</td>
-                <td>
-                    <a href="#" class="admin-btn">
-                        <img src="/assets/images/edit.png" alt="View" height="24" width="24">View
-                    </a>
-                    <a href="#" class="admin-btn">
-                        <img src="/assets/images/delete.png" alt="Delete" height="24" width="24">Delete
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>presentation.pptx</td>
-                <td>Presentation</td>
-                <td>13-Jan-2025</td>
-                <td>Public</td>
-                <td>
-                    <a href="#" class="admin-btn">
+                    <a th:href="@{'/admin/posts/'+ ${post.getId()}}" target="_blank" class="admin-btn">
                         <img src="/assets/images/edit.png" alt="View" height="24" width="24">View
                     </a>
                     <a href="#" class="admin-btn">
@@ -92,7 +66,20 @@
         <img src="/assets/images/create.png" alt="Add" height="24" width="24">Add New Post
     </a>
 </div>
-
+<nav>
+    <ul class="pagination">
+        <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
+            <a class="page-link" th:href="@{/admin/posts(page=${currentPage - 1})}" aria-label="Previous">Previous</a>
+        </li>
+        <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPage - 1)}" 
+            th:classappend="${i == currentPage} ? 'active'">
+            <a class="page-link" th:href="@{/admin/posts(page=${i})}" th:text="${i + 1}"></a>
+        </li>
+        <li class="page-item" th:classappend="${currentPage + 1 == totalPage} ? 'disabled'">
+            <a class="page-link" th:href="@{/admin/posts(page=${currentPage + 1})}" aria-label="Next">Next</a>
+        </li>
+    </ul>
+  </nav>
 
 <div th:replace="~{fragments/footer :: footer}"></div>
 
