Header is updated

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,12 +36,13 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Services
+            Publications
           </a>
           <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-            <li><a class="dropdown-item" href="/talent-skill-development">Talent & Skill Development</a></li>
-            <li><a class="dropdown-item" href="/training-it-professionals">Training for IT Professionals</a></li>
-            <li><a class="dropdown-item" href="/vapt">VAPT</a></li>
+            <li><a class="dropdown-item" href="/magazines">Magazines</a></li>
+            <li><a class="dropdown-item" href="/guidelines">Guidelines</a></li>
+            <li><a class="dropdown-item" href="/acts">Acts</a></li>
+            <li><a class="dropdown-item" href="/policies">Policies</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
