header item added

--- a/src/main/resources/templates/basic/mis-vis.html
+++ b/src/main/resources/templates/basic/mis-vis.html
@@ -16,7 +16,7 @@
 
     <!-- Page Header -->
     <header>
-        <div class="container">
+        <div class="base_header-container">
             <h1>Our Mission & Vision</h1>
             <p>Guiding principles and aspirations for a brighter future.</p>
         </div>
