--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -41,6 +41,8 @@
           <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
             <li><a class="dropdown-item" href="/magazines">Magazines</a></li>
             <li><a class="dropdown-item" href="/guidelines">Guidelines</a></li>
+            <li><a class="dropdown-item" href="/documents">Documents</a></li>
+            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/acts">Acts</a></li>
             <li><a class="dropdown-item" href="/policies">Policies</a></li>
           </ul>
