--- a/src/main/resources/templates/post/single-post.html
+++ b/src/main/resources/templates/post/single-post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Post</title>
+    <title th:text="${post.getTitle()}">Single Post</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -20,21 +20,8 @@
         <div class="content">
             <!-- Left Side: Description -->
             <section class="description">
-                <h1>Post Headline</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vehicula, lorem non suscipit
-                   facilisis, metus libero viverra purus, vel ullamcorper ligula sapien id justo. Aenean non est at lorem
-                   condimentum feugiat sit amet non risus. Etiam placerat sem sed tortor suscipit, quis gravida nulla 
-                   convallis. Donec vel erat a lectus dapibus interdum vel vel enim. Mauris porttitor interdum bibendum. 
-                   Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla
-                   facilisi. Vivamus venenatis nisl ac ipsum vulputate, ac eleifend velit fermentum. Sed tincidunt lectus 
-                   ac facilisis tempor. Donec scelerisque diam vitae urna tincidunt, ut convallis felis vehicula. Integer
-                   luctus, lorem nec tristique eleifend, sapien justo volutpat lectus, id sollicitudin tortor nunc ut eros.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliquet nibh sed tortor fermentum, at 
-                   ullamcorper risus fringilla. Nulla et sapien at orci vehicula fringilla. Sed vitae purus id arcu luctus 
-                   vestibulum nec vel sapien. Aliquam erat volutpat. Fusce eleifend dictum lorem a convallis. In viverra 
-                   odio non enim gravida feugiat. Nam volutpat fringilla viverra. Phasellus fermentum, lorem in facilisis 
-                   aliquet, odio elit consequat urna, sit amet dignissim magna sem vel urna. Maecenas convallis ac lorem 
-                   eget volutpat. Vestibulum egestas metus id ligula efficitur condimentum.</p>
+                <h1 th:text="${post.getTitle()}"> </h1>
+                <p th:utext="${post.getBody()}"> </p>
             </section>
 
             <!-- Right Side: Related Posts -->
