--- a/src/main/resources/static/assets/css/single-post.css
+++ b/src/main/resources/static/assets/css/single-post.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .related-posts {
-    flex: 1 1 30%;
+    /* flex: 1 1 30%; */
     padding: 20px;
     border-left: 4px solid #28a745;
     background-color: #e8f5e8;
